--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,5 +6,6 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
    </head>
    <body>
