--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <% }); %>
     </ul>
   <% } %>
-
+<div class="form-container">
  <form method="POST" action="/users/add"> <!--POST is request method. action = route info to be submitted to -->
       <label>First Name</label><br>
        <input type="text" name="first_name">
@@ -20,6 +20,7 @@
        <br><br>
      <input type="submit" value="Submit">
  </form>
+</div>
      <h1><%= title %></h1>
      <ul>
      <% users.forEach(user => { %>
