--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,14 @@ html, body {
     background: #FBB171;
 }
 
+.form-container {
+    background-color: #C1ECFF;
+    text-align: center;
+    width: 30%;
+    margin: 100px auto 0;
+    border: 2px solid #707070;
+}
+
 h1 {
     color: red;
 }
