--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,6 +27,10 @@ label {
     text-align: left;
 }
 
+label[for="email"] {
+    left: -66px;
+}
+
 input[type="submit"] {
     background-color: var(--button-color);
     color: var(--text   );
@@ -34,4 +38,8 @@ input[type="submit"] {
     font-size: 15px;
     font-weight: bold;
     padding: 5px 12px;
+}
+
+input {
+    margin-bottom: 15px;
 }
