--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,7 @@
 
 html, body {
     background: var(--page-background);
+    font-family: 'Open Sans', sans-serif;
 }
 
 .form-container {
@@ -51,6 +52,10 @@ input {
 
 .user-list {
     margin: 0 auto;
-    width: 500px;   
-    
+    width: 500px;     
+    text-align: center;
+}
+
+.user-list ul {
+    list-style-type: none;
 }
