--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,12 @@
-<html>
-   <head>
-     <title>My Express App</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
-   </head>
-   <body>
+<html lang="en">
+
+<head>
+   <title>My Express App</title>
+   <link href="https://fonts.googleapis.com/css?family=Open+Sans"
+         rel="stylesheet">
+   <link rel="stylesheet"
+         type="text/css"
+         href="/css/styles.css">
+</head>
+
+<body>
